# server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: routes_rag.py
app/core/: config.py  logging.py
app/services/: pdf_service.py  rag_service.py
app/services/rag/: chunker.py  integrity.py  llm.py  prompts.py  service.py  vector_store.py
