[project]
name = "server"
version = "0.1.0"
description = "DocFusionX Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi[standard]>=0.128.5",
    "mistralai>=1.12.0",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
